# screenshot-to-code

./: CLAUDE.md  README.md  TESTING.md  docker-compose.yml  package.json
.claude/: launch.json
backend/: .env.example  Dockerfile  README.md  config.py  llm.py  main.py  pyproject.toml
backend/agent/: engine.py
backend/agent/providers/: factory.py  openai_compatible.py
backend/agent/tools/: runtime.py
backend/evals/: core.py
backend/routes/: generate_code.py  generate_code_api.py
backend/tests/: test_model_selection.py  test_parameter_extraction_stage.py  test_status_broadcast.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  types.ts
frontend/src/components/settings/: SettingsTab.tsx
